--- a/pom.xml
+++ b/pom.xml
@@ -2,40 +2,59 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <groupId>koddas.web.war</groupId>
   <artifactId>wwp</artifactId>
   <version>1.0.0</version>
   <packaging>war</packaging>
-  
+
   <name>WAR Web Project</name>
-  <description>A very simple Maven-enabled WAR web project</description>
-  
+  <description>A simple Maven-enabled WAR web project</description>
+
   <dependencies>
+    <!-- Gson dependency -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.3.1</version>
+      <version>2.8.9</version> <!-- Updated version -->
     </dependency>
+
+    <!-- JAX-RS API dependency -->
     <dependency>
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
-      <version>2.0.1</version>
+      <version>2.1.1</version> <!-- Updated version -->
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  
+
   <build>
     <plugins>
+      <!-- Maven Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>3.10.1</version> <!-- Updated version -->
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source> <!-- Modern Java version -->
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+
+      <!-- Maven WAR Plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.4.0</version> <!-- Modern version -->
+        <configuration>
+          <!-- Configuration options (if needed) -->
         </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 </project>
